Fix coverage aggregation pattern in Directory.Build.targets
🔧 Fixed coverage file pattern:
- Changed from: TestResults/**/coverage.cobertura.xml
- Changed to: test/**/TestResults/**/coverage.cobertura.xml

✅ Verification:
- Coverage files are generated by CollectCoverage=true in csproj files
- Files located in test/*/TestResults/**/coverage.cobertura.xml
- Aggregation now finds and processes all coverage files correctly
- HTML reports generated with 100+ coverage files
- SonarQube report generated successfully

📊 Result:
- Coverage aggregation now working as originally intended
- No changes needed to csproj files (your original setup was correct)
- Single line fix resolves the coverage collection issue
- TestResults/coverage/ now contains aggregated reports

--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -8,7 +8,7 @@
       <HtmlReportDir>$(CoverageDir)/html</HtmlReportDir>
       <JsonReportDir>$(CoverageDir)/json</JsonReportDir>
       <CoberturaReportDir>$(CoverageDir)/cobertura</CoberturaReportDir>
-      <CoverageFilePattern>$(SolutionDir)TestResults/**/coverage.cobertura.xml</CoverageFilePattern>
+      <CoverageFilePattern>$(SolutionDir)test/**/TestResults/**/coverage.cobertura.xml</CoverageFilePattern>
     </PropertyGroup>
 
     <Message Text="Aggregating coverage reports from: $(CoverageFilePattern)" Importance="high" />
