--- a/.docker/Dockerfile.mame
+++ b/.docker/Dockerfile.mame
@@ -1,46 +1,46 @@
 # Use Ubuntu base image (more reliable than Windows for GitHub Actions)
 FROM ubuntu:22.04
 
+# Avoid interactive prompts during package installation
+ENV DEBIAN_FRONTEND=noninteractive
+
 # Install dependencies
 RUN apt-get update && apt-get install -y \
     wget \
-    unzip \
     curl \
+    unzip \
     && rm -rf /var/lib/apt/lists/*
 
 # Install .NET SDK
-RUN wget https://packages.microsoft.com/config/ubuntu/22.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb \
-    && dpkg -i packages-microsoft-prod.deb \
-    && rm packages-microsoft-prod.deb \
-    && apt-get update \
-    && apt-get install -y dotnet-sdk-8.0 \
-    && rm -rf /var/lib/apt/lists/*
+RUN wget https://packages.microsoft.com/config/ubuntu/22.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb && \
+    dpkg -i packages-microsoft-prod.deb && \
+    rm packages-microsoft-prod.deb && \
+    apt-get update && \
+    apt-get install -y dotnet-sdk-8.0 && \
+    rm -rf /var/lib/apt/lists/*
 
-# Set working directory
-WORKDIR /build
+# Create MAME directory
+RUN mkdir -p /opt/mame
 
-# Install MAME once during container build
-# This avoids IP bans during CI runs
+# Download and install MAME with better error handling
 RUN echo "Installing MAME in container..." && \
-    # Create MAME directory
-    mkdir -p /opt/mame && \
-    # Download MAME (container IP won't be banned)
     MAME_URL="https://github.com/mamedev/mame/releases/download/mame0284/mame0284_linux_x64.tar.gz" && \
     echo "Downloading MAME from: $MAME_URL" && \
-    wget --timeout=300 --tries=3 "$MAME_URL" -O mame.tar.gz && \
-    # Extract MAME
+    wget --timeout=300 --tries=3 --progress=bar:force "$MAME_URL" -O /tmp/mame.tar.gz && \
+    echo "Download completed, file size: $(ls -lh /tmp/mame.tar.gz | awk '{print $5}')" && \
     echo "Extracting MAME..." && \
-    tar -xzf mame.tar.gz -C /opt/mame --strip-components=1 && \
-    # Clean up
-    rm mame.tar.gz && \
-    # Make executable
+    tar -xzf /tmp/mame.tar.gz -C /opt/mame --strip-components=1 && \
+    echo "Extraction completed" && \
+    rm /tmp/mame.tar.gz && \
     chmod +x /opt/mame/mame && \
-    # Verify installation
+    echo "Verifying MAME installation..." && \
     if [ -f "/opt/mame/mame" ]; then \
-        echo "MAME installed successfully"; \
-        /opt/mame/mame -version; \
+        echo "MAME installed successfully at: /opt/mame/mame"; \
+        /opt/mame/mame -version | head -3; \
+        echo "MAME is ready for use"; \
     else \
         echo "ERROR: MAME installation failed"; \
+        ls -la /opt/mame/; \
         exit 1; \
     fi
 
@@ -53,9 +53,9 @@ ENV GAMEVM_FLATPAK_PATH=""
 WORKDIR /workspace
 
 # Verify MAME is available
-RUN echo "Verifying MAME installation..." && \
-    /opt/mame/mame -version && \
-    echo "MAME is ready for use"
+RUN echo "Final verification of MAME..." && \
+    /opt/mame/mame -help | head -5 && \
+    echo "Container is ready"
 
 # Default command
 CMD ["/bin/bash"]
