--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,192 +9,114 @@ on:
 jobs:
   build:
     name: Build and analyze
-    runs-on: ubuntu-latest
-    
+    runs-on: windows-2022
     steps:
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: 17
-          distribution: 'zulu'
-          
+          distribution: 'zulu' # Alternative distribution options are available.
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0
-          
-      - name: Set up MAME
-        uses: ./.github/actions/mame-setup
-        with:
-          mame-version: 'mame0284'
-          install-path: '/opt/mame'
-          
-      - name: Verify MAME Installation
-        shell: bash
-        run: |
-          echo "=== Verifying MAME Installation ==="
-          echo "MAME executable path: $GAMEVM_WHICH_PATH"
-          
-          if [ -f "$GAMEVM_WHICH_PATH" ]; then
-            echo "✅ MAME is available"
-            ls -la "$GAMEVM_WHICH_PATH"
-            "$GAMEVM_WHICH_PATH" -version | head -3
-          else
-            echo "❌ MAME not found at $GAMEVM_WHICH_PATH"
-            exit 1
-          fi
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       - name: Cache SonarQube Cloud packages
         uses: actions/cache@v4
         with:
-          path: ~/.sonar/cache
+          path: ~\sonar\cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
       - name: Cache SonarQube Cloud scanner
         id: cache-sonar-scanner
         uses: actions/cache@v4
         with:
-          path: ./.sonar/scanner
+          path: .\.sonar\scanner
           key: ${{ runner.os }}-sonar-scanner
           restore-keys: ${{ runner.os }}-sonar-scanner
       - name: Install SonarQube Cloud scanner
         if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
-        shell: bash
+        shell: powershell
         run: |
-          mkdir -p ./.sonar/scanner
-          dotnet tool update dotnet-sonarscanner --tool-path ./.sonar/scanner
+          New-Item -Path .\.sonar\scanner -ItemType Directory
+          dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
       - name: Install dotnet-coverage
-        shell: bash
+        shell: powershell
         run: |
           dotnet tool install --global dotnet-coverage
-          echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
-      - name: Verify MAME Installation in Container
-        shell: bash
-        run: |
-          echo "=== Verifying MAME in Container ==="
-          echo "MAME executable path: $GAMEVM_WHICH_PATH"
+          $env:PATH += ";$env:USERPROFILE\.dotnet\tools"
+      - name: Cache MAME
+        uses: actions/cache@v4
+        with:
+          path: .tools/mame
+          key: ${{ runner.os }}-mame-v0284 # Use specific version for cache key
           
-          if [ -f "$GAMEVM_WHICH_PATH" ]; then
-            echo "✅ MAME is available in container"
-            ls -la "$GAMEVM_WHICH_PATH"
-            
-            # Test MAME version
-            if "$GAMEVM_WHICH_PATH" -version; then
-              echo "MAME version check successful"
-            else
-              echo "Warning: Could not get MAME version"
-            fi
-          else
-            echo "❌ MAME not found in container at $GAMEVM_WHICH_PATH"
-            echo "Available executables in /opt/mame:"
-            if [ -d "/opt/mame" ]; then
-              ls -la /opt/mame/
-            fi
-            exit 1
-          fi
+      - name: Install MAME via DevTools (uses cache if available, supports silent .exe extraction)
+        shell: powershell
+        run: |
+          # Optional: Use absolute paths for enhanced security (resolves S4036)
+          # Set environment variables: GAMEVM_WHICH_PATH and GAMEVM_FLATPAK_PATH
+          dotnet run --project src/GameVM.DevTools -- mame install
+          if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
           
       - name: Build and analyze
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        shell: bash
+        shell: powershell
         run: |
 
-          echo "=== Starting SonarQube Scanner Begin ==="
-          ./.sonar/scanner/dotnet-sonarscanner begin /k:"kennethcochran_GameVM" /o:"kennethcochran" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.token="$SONAR_TOKEN" /d:sonar.cs.vscoveragexml.reportsPaths="coverage.xml"
-          echo "SonarQube Scanner Begin exit code: $?"
-          if [ $? -ne 0 ]; then 
-            echo "ERROR: SonarQube Scanner Begin failed with exit code $?"
-            exit 1
-          fi
+          .\.sonar\scanner\dotnet-sonarscanner begin /k:"kennethcochran_GameVM" /o:"kennethcochran" /d:sonar.host.url="https://sonarcloud.io" /d:sonar.token=$env:SONAR_TOKEN /d:sonar.cs.vscoveragexml.reportsPaths="coverage.xml"
+          if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
           
-          echo "=== Starting dotnet build ==="
-          dotnet build --verbosity normal
-          echo "dotnet build exit code: $?"
-          if [ $? -ne 0 ]; then 
-            echo "ERROR: dotnet build failed with exit code $?"
-            exit 1
-          fi
+          dotnet build
+          if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
           
-          echo "=== Starting dotnet tool restore ==="
-          dotnet tool restore --verbosity normal
-          echo "dotnet tool restore exit code: $?"
-          if [ $? -ne 0 ]; then 
-            echo "ERROR: dotnet tool restore failed with exit code $?"
-            exit 1
-          fi
+          # Install .NET tools (including reportgenerator)
+          dotnet tool restore
+          if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
           
-          echo "=== Starting coverage collection ==="
-          dotnet-coverage collect "dotnet test" -f xml -o "coverage.xml" --verbosity normal
-          echo "Coverage collection exit code: $?"
-          if [ $? -ne 0 ]; then 
-            echo "ERROR: Coverage collection failed with exit code $?"
-            exit 1
-          fi
+          # Run Unit/BDD tests with coverage
+          dotnet-coverage collect "dotnet test" -f xml -o "coverage.xml"
+          if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
           
-          echo "=== Verifying coverage file ==="
-          if [ -f "coverage.xml" ]; then
-            echo "Coverage file created successfully"
-            ls -la "coverage.xml"
-          else
-            echo "ERROR: Coverage file not found"
-            exit 1
-          fi
+          # Verify coverage file exists
+          if (Test-Path "coverage.xml") {
+            Write-Host "Coverage file created successfully"
+            Get-Item "coverage.xml" | Write-Host
+          } else {
+            Write-Host "Warning: Coverage file not found"
+          }
           
-          echo "=== Starting SonarQube Scanner End ==="
-          ./.sonar/scanner/dotnet-sonarscanner end /d:sonar.token="$SONAR_TOKEN"
-          echo "SonarQube Scanner End exit code: $?"
-          if [ $? -ne 0 ]; then 
-            echo "ERROR: SonarQube Scanner End failed with exit code $?"
-            exit 1
-          fi
-          
-          echo "=== Build and analyze completed successfully ==="
+          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="$env:SONAR_TOKEN"
+          if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
           
       - name: Check SonarQube Quality Gate
-        shell: bash
+        shell: powershell
         run: |
-          echo "=== Checking SonarQube Quality Gate ==="
+          $headers = @{
+            "Authorization" = "Bearer $env:SONAR_TOKEN"
+          }
           
           # Wait for SonarQube processing
-          echo "Waiting 30 seconds for SonarQube processing..."
-          sleep 30
+          Start-Sleep -Seconds 30
           
           # Get the latest analysis for the project
-          PROJECT_KEY="kennethcochran_GameVM"
-          URL="https://sonarcloud.io/api/qualitygates/project_status?projectKey=$PROJECT_KEY"
+          $projectKey = "kennethcochran_GameVM"
+          $url = "https://sonarcloud.io/api/qualitygates/project_status?projectKey=$projectKey"
           
-          # Set up headers
-          AUTH_HEADER="Authorization: Bearer $SONAR_TOKEN"
-          
-          echo "Checking quality gate at: $URL"
-          
-          if response=$(curl -s -f -H "$AUTH_HEADER" "$URL"); then
-            echo "Quality Gate response received"
+          try {
+            $response = Invoke-RestMethod -Uri $url -Headers $headers -Method Get
+            Write-Host "Quality Gate Status: $($response.projectStatus.status)"
             
-            # Extract status using jq (if available) or grep
-            if command -v jq &> /dev/null; then
-              STATUS=$(echo "$response" | jq -r '.projectStatus.status')
-              echo "Quality Gate Status: $STATUS"
-              
-              if [ "$STATUS" = "ERROR" ]; then
-                echo "Quality Gate failed!"
-                echo "Failed conditions:"
-                echo "$response" | jq -r '.projectStatus.conditions[] | select(.status == "ERROR") | "- \(.metricKey): Expected \(.errorThreshold), got \(.actualValue)"'
-                exit 1
-              else
-                echo "Quality Gate passed!"
-              fi
-            else
-              echo "jq not available, showing raw response:"
-              echo "$response"
-              
-              # Simple grep for status
-              if echo "$response" | grep -q '"status":"ERROR"'; then
-                echo "Quality Gate failed!"
-                exit 1
-              else
-                echo "Quality Gate passed!"
-              fi
-            fi
-          else
-            echo "Error checking quality gate: HTTP request failed"
+            if ($response.projectStatus.status -eq "ERROR") {
+              Write-Host "Quality Gate failed!"
+              Write-Host "Failed conditions:"
+              $response.projectStatus.conditions | Where-Object { $_.status -eq "ERROR" } | ForEach-Object {
+                Write-Host "- $($_.metricKey): Expected $($_.errorThreshold), got $($_.actualValue)"
+              }
+              exit 1
+            } else {
+              Write-Host "Quality Gate passed!"
+            }
+          } catch {
+            Write-Host "Error checking quality gate: $($_.Exception.Message)"
             exit 1
-          fi
+          }
