--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,10 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
+      - name: Setup .NET 10
+        uses: actions/setup-dotnet@v5
+        with:
+          dotnet-version: '10.0.x'
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -28,7 +32,6 @@ jobs:
       
       - name: Install MAME (Linux)
         if: matrix.os == 'ubuntu-latest'
-        continue-on-error: true
         run: |
           sudo apt-get update
           sudo apt-get install -y mame
@@ -36,14 +39,12 @@ jobs:
 
       - name: Install MAME (Windows)
         if: matrix.os == 'windows-latest'
-        continue-on-error: true
         run: |
           choco install mame -y --no-progress
           echo "MAME installation completed"
 
       - name: Install MAME (macOS)
         if: matrix.os == 'macos-latest'
-        continue-on-error: true
         run: |
           brew install mame
           echo "MAME installation completed"
