Fix DI container setup for Program.Main integration tests
- Add missing ICapabilityValidatorService registration
- Add GameVM.Compiler.Capabilities project reference
- Add required using statement for Compiler.Capabilities
- Fixes Main_WithMissingInputArgument_ShouldShowErrorMessage tests
- All 553 tests now passing in Rider test runner

--- a/src/GameVM.Compile/GameVM.Compile.csproj
+++ b/src/GameVM.Compile/GameVM.Compile.csproj
@@ -24,6 +24,7 @@
   <ItemGroup>
     <ProjectReference Include="..\GameVM.Compiler.Core\GameVM.Compiler.Core.csproj" />
     <ProjectReference Include="..\GameVM.Compiler.Application\GameVM.Compiler.Application.csproj" />
+    <ProjectReference Include="..\GameVM.Compiler.Capabilities\GameVM.Compiler.Capabilities.csproj" />
     <ProjectReference Include="..\GameVM.Compiler.Pascal\GameVM.Compiler.Pascal.csproj" />
     <ProjectReference Include="..\GameVM.Compiler.Backend.Atari2600\GameVM.Compiler.Backend.Atari2600.csproj" />
     <ProjectReference Include="..\GameVM.Compiler.Interaction\GameVM.Compiler.Interaction.csproj" />
